--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote generator</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
 
@@ -129,6 +129,6 @@
     </div>
 
 
-    <script src="../js/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
